apps/clubs/DCI/outlinewiki/prod/networking.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: DCI-outlinewiki-httpproxy
spec:
  virtualhost:
    fqdn: wiki.DCI.etsmtl.club
    tls:
      secretName: DCI-outlinewiki-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: DCI-outlinewiki-svc
          port: 3000
      timeoutPolicy:
        idle: 600s
        response: 600s
